android-studio code cleanups